# MovieMate

./: .env  .env.example  .gitignore  README.md  cli_chat.py  main.py  pyproject.toml
Data/: data.ipynb  dataprep.py  ingest.py
app/: chat_handler.py  chat_model.py  config.py  db.py  embeddings.py  memory.py  prompts.py  query_parser.py  retriever.py
app/api/: main.py
app/evals/: judge.py  service.py
app/graph/: build_graph.py  nodes.py  router.py  state.py
app/llm/: chat_model.py  embeddings.py  prompts.py
app/memory/: history.py
app/retrieval/: formatter.py  query_parser.py  reranker.py  retriever.py
app/rules/: heuristics.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: chat-dashboard.tsx
frontend/lib/: types.ts
report/: project_report.typ
tests/: test_evals.py  test_heuristics.py  test_nodes.py  test_query_parser.py  test_router.py
