[project]
name = "moviemate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crawl4ai>=0.8.5",
    "langchain",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pgvector>=0.4.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
